--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -28,7 +28,7 @@ COPY . .
 RUN composer install --optimize-autoloader --no-dev
 
 # Step 5: Set up Nginx and configure it to serve Laravel
-COPY docker/nginx/laravel.conf /etc/nginx/conf.d/default.conf
+COPY ./docker/nginx/laravel.conf /etc/nginx/conf.d/default.conf
 
 # Step 6: Set the proper permissions (ensure the web server can access the files)
 RUN chown -R www-data:www-data /var/www && chmod -R 775 /var/www/storage
