--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -1,40 +1,59 @@
-# Step 1: Use an official PHP image with the necessary extensions for Laravel
-FROM php:8.1-fpm-alpine as base
+# Stage 1: Build dependencies
+FROM composer:2.7.2 AS composer
 
-# Step 2: Install system dependencies and PHP extensions
-RUN apk --no-cache add \
-    libpng-dev \
-    libjpeg-turbo-dev \
-    libfreetype6-dev \
-    libzip-dev \
-    bash \
-    nginx \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd zip pdo pdo_mysql \
-    && apk del libpng-dev libjpeg-turbo-dev libfreetype6-dev
+WORKDIR /var/www/
 
-# Step 3: Install Composer (dependency manager for PHP)
-FROM base as composer
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-# Step 4: Set working directory and copy application files
-WORKDIR /var/www
-
-# Copy the Laravel project files into the container
+# Copy the entire application code into the container
 COPY . .
 
-# Install Laravel dependencies using Composer
-RUN composer install --optimize-autoloader --no-dev
+# Install PHP dependencies without dev dependencies
+RUN composer install --ignore-platform-reqs --prefer-dist --no-scripts --no-progress --no-interaction --no-dev
 
-# Step 5: Set up Nginx and configure it to serve Laravel
-COPY ./docker/nginx/laravel.conf /etc/nginx/conf.d/default.conf
+# Stage 2: Create the final image
+FROM php:8.2.8-fpm
 
-# Step 6: Set the proper permissions (ensure the web server can access the files)
-RUN chown -R www-data:www-data /var/www && chmod -R 775 /var/www/storage
+# Set environment variables
+ENV USER=www
+ENV GROUP=www
+ENV ACCEPT_EULA=Y
 
-# Step 7: Expose port 80 to access the application
-EXPOSE 80
+# Install system dependencies and PHP extensions
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    libpng-dev \
+    libonig-dev \
+    libxml2-dev \
+    libzip-dev \
+    zip \
+    unzip \
+    gnupg \
+    gnupg2 \
+    nano && \
+    docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Step 8: Start PHP-FPM and Nginx in the background
-CMD service nginx start && php-fpm
+# Install SQL Server drivers if needed (optional)
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+    curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+    apt-get update && \
+    ACCEPT_EULA=Y apt-get install -y msodbcsql18 mssql-tools18 unixodbc-dev && \
+    echo 'export PATH="$PATH:/opt/mssql-tools18/bin"' >> ~/.bashrc
+
+# Copy application code from the composer stage
+COPY --from=composer /var/www/ /var/www/
+
+# Setup working directory
+WORKDIR /var/www/
+
+# Create user and group for running the application
+RUN groupadd -g 1000 ${GROUP} && useradd -u 1000 -ms /bin/bash -g ${GROUP} ${USER}
+
+# Grant necessary permissions
+RUN chown -R ${USER} /var/www
+
+# Expose port for PHP-FPM
+EXPOSE 9000
+
+# Start PHP-FPM server
+CMD ["php-fpm"]
