--- a/laravel_api/nginx/default.conf
+++ b/laravel_api/nginx/default.conf
@@ -10,16 +10,13 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www$document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
         deny all;
     }
-
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
 }
