--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -20,7 +20,10 @@ RUN apt-get update && apt-get install -y \
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Copy Laravel files before running Composer
+COPY composer.json /var/www
+
 COPY . /var/www
+
 
 # Run Composer Install
 RUN composer install --no-dev --optimize-autoloader
