--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -10,9 +10,9 @@ RUN apt-get update && apt-get install -y \
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY . /var/www/html
+WORKDIR /var/www/html
+COPY laravel_api/* /var/www/html
 
-# WORKDIR /var/www/html
 # COPY apache2.conf /etc/apache2/apache2.conf
 # COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
 ENV COMPOSER_ALLOW_SUPERUSER=1
