--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -1,60 +1,60 @@
-# FROM php:8.2-apache
+FROM php:8.2-apache
 
-# RUN apt-get update && apt-get install -y \
-#     libzip-dev \
-#     zip \
-#     unzip \
+RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    zip \
+    unzip \
+    git \
+    && docker-php-ext-install zip \
+    && a2enmod rewrite
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+COPY laravel_api/. /var/www/html
+WORKDIR /var/www/html
+
+# COPY apache2.conf /etc/apache2/apache2.conf
+# COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+ENV COMPOSER_ALLOW_SUPERUSER=1
+RUN composer install
+RUN chown -R www-data:www-data /var/www/html/storage
+RUN chmod -R 777 /var/www/html/storage
+
+EXPOSE 8000
+
+# Start PHP-FPM
+CMD ["php artisan serve"]
+
+# //////////
+# FROM php:8.2-fpm-alpine AS composer-base
+
+# # Install system dependencies
+# RUN apk add --no-cache --virtual .build-deps \
+#     autoconf \
+#     curl \
 #     git \
-#     && docker-php-ext-install zip \
-#     && a2enmod rewrite
+#     libzip-dev \
+#     unzip
 
-# RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+# # Install PHP extensions
+# RUN docker-php-ext-install pdo_mysql zip
 
-# COPY laravel_api/. /var/www/html
-# WORKDIR /var/www/html
+# # Get latest Composer
+# COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
-# # COPY apache2.conf /etc/apache2/apache2.conf
-# # COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
-# ENV COMPOSER_ALLOW_SUPERUSER=1
-# RUN composer install
-# RUN chown -R www-data:www-data /var/www/html/storage
-# RUN chmod -R 777 /var/www/html/storage
+# WORKDIR /app
+
+# FROM nginx:alpine
+
+# COPY --from=composer-base /app /app
+# COPY laravel_api/. /app
+
+# # Copy nginx configuration
+# COPY laravel_api/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+
+# # Set document root
+# RUN sed -i "s!/usr/share/nginx/html!/app/public!g" /etc/nginx/conf.d/default.conf
 
 # EXPOSE 80
 
-# # Start PHP-FPM
-# CMD ["php-fpm"]
-
-# //////////
-FROM php:8.2-fpm-alpine AS composer-base
-
-# Install system dependencies
-RUN apk add --no-cache --virtual .build-deps \
-    autoconf \
-    curl \
-    git \
-    libzip-dev \
-    unzip
-
-# Install PHP extensions
-RUN docker-php-ext-install pdo_mysql zip
-
-# Get latest Composer
-COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
-
-WORKDIR /app
-
-FROM nginx:alpine
-
-COPY --from=composer-base /app /app
-COPY laravel_api/. /app
-
-# Copy nginx configuration
-COPY laravel_api/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
-
-# Set document root
-RUN sed -i "s!/usr/share/nginx/html!/app/public!g" /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# CMD ["nginx", "-g", "daemon off;"]
