--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -1,5 +1,34 @@
+# FROM php:8.2-apache
+
+# RUN apt-get update && apt-get install -y \
+#     libzip-dev \
+#     zip \
+#     unzip \
+#     git \
+#     && docker-php-ext-install zip \
+#     && a2enmod rewrite
+
+# RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# COPY laravel_api/. /var/www/html
+# WORKDIR /var/www/html
+
+# # COPY apache2.conf /etc/apache2/apache2.conf
+# # COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+# ENV COMPOSER_ALLOW_SUPERUSER=1
+# RUN composer install
+# RUN chown -R www-data:www-data /var/www/html/storage
+# RUN chmod -R 777 /var/www/html/storage
+
+# EXPOSE 8000
+
+# # Start PHP-FPM
+# CMD ["apache2-foreground"]
+
+# //////////
 FROM php:8.2-apache
 
+# Install required system packages
 RUN apt-get update && apt-get install -y \
     libzip-dev \
     zip \
@@ -8,24 +37,35 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install zip \
     && a2enmod rewrite
 
+# Install Composer globally
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY laravel_api/. /var/www/html
-WORKDIR /var/www/html
+# Set the correct working directory
+WORKDIR /var/www
 
-# COPY apache2.conf /etc/apache2/apache2.conf
-# COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+# Copy Laravel project files
+COPY laravel_api/. /var/www
+
+# Ensure the correct document root is used
+RUN sed -i 's|/var/www/html|/var/www/public|g' /etc/apache2/sites-available/000-default.conf
+
+# Set environment variables
 ENV COMPOSER_ALLOW_SUPERUSER=1
-RUN composer install
-RUN chown -R www-data:www-data /var/www/html/storage
-RUN chmod -R 777 /var/www/html/storage
 
-EXPOSE 8000
+# Install dependencies
+RUN composer install --no-dev --optimize-autoloader
 
-# Start PHP-FPM
+# Set correct permissions
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
+RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache
+
+# Expose the web server port
+EXPOSE 80
+
+# Start Apache
 CMD ["apache2-foreground"]
 
-# //////////
+# //////
 # FROM php:8.2-fpm-alpine AS composer-base
 
 # # Install system dependencies
