--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -35,7 +35,9 @@ RUN apt-get update && apt-get install -y \
     unzip \
     git \
     && docker-php-ext-install zip \
-    && a2enmod rewrite
+    libpq-dev \  
+    && docker-php-ext-install zip pdo_pgsql pgsql \
+    && a2enmod rewrite 
 
 # Install Composer globally
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
