--- a/laravel_api/dockerfile
+++ b/laravel_api/dockerfile
@@ -29,15 +29,21 @@
 FROM php:8.2-apache
 
 # Install required system packages
+# RUN apt-get update && apt-get install -y \
+#     libzip-dev \
+#     zip \
+#     unzip \
+#     git \
+#     && docker-php-ext-install zip \
+#     && a2enmod rewrite
 RUN apt-get update && apt-get install -y \
     libzip-dev \
     zip \
     unzip \
     git \
-    && docker-php-ext-install zip \
     libpq-dev \  
-    && docker-php-ext-install zip pdo_pgsql pgsql \
-    && a2enmod rewrite 
+    && docker-php-ext-install zip pdo_pgsql pgsql \  
+    && a2enmod rewrite
 
 # Install Composer globally
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
