--- a/client/dockerfile
+++ b/client/dockerfile
@@ -6,13 +6,13 @@ WORKDIR /app
 
 # Step 3: Install dependencies
 # Copy the package.json and package-lock.json to the working directory
-COPY package*.json ./
+COPY client/. package*.json ./
 
 # Install the dependencies inside the container
 RUN npm install --frozen-lockfile
 
 # Step 4: Copy the rest of the application code into the container
-COPY . .
+COPY client/. .
 
 # Step 5: Build the Next.js application
 RUN npm run build
